--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.12.1"
   }
 }
