--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.17.4",
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
