--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "node": "^20.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
