--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "next": "^14.2.15",
     "node": "^20.16.0",
     "react": "^18.3.1",
