--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@algolia/autocomplete-core": "^1.17.4",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.1.8",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.460.0",
     "next": "^14.2.15",
     "node": "^20.16.0",
     "react": "^18.3.1",
